k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      component: frontend
  replicas: 4
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
      - name: frontend
        image: kareemelkasaby/badreads-frontend:latest
        ports:
        - containerPort: 3000
