k8s/backend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - port: 4000
    targetPort: 4000
