k8s/frontend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - port: 3000
    targetPort: 3000
