k8s/ingress-service.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /
#             backend:
#               serviceName: frontend-clusterip
#               servicePort: 3000
#           - path: /api/
#             backend:
#               serviceName: backend-clusterip
#               servicePort: 4000
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: front.kareem.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-clusterip
          servicePort: 3000
  - host: back.kareem.com
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-clusterip
          servicePort: 4000
